Next-2426 - Remove custom css for sw-fields

--- a/Resources/administration/src/app/component/form/sw-condition-tree/sw-condition-base/sw-condition-base.html.twig
+++ b/Resources/administration/src/app/component/form/sw-condition-tree/sw-condition-base/sw-condition-base.html.twig
@@ -20,7 +20,7 @@
 
         {% block sw_condition_base_fields %}
             <slot name="condition-fields">
-                <sw-field type="text" class="field--main"
+                <sw-field type="text" class="field--main" size="medium"
                           :placeholder="$tc('global.sw-condition.condition.placeholder-warning')"
                           :disabled="true">
                 </sw-field>
