--- a/Resources/administration/src/module/sw-cms/page/sw-cms-detail/sw-cms-detail.html.twig
+++ b/Resources/administration/src/module/sw-cms/page/sw-cms-detail/sw-cms-detail.html.twig
@@ -68,7 +68,7 @@
                         {% block sw_cms_detail_toolbar_actions %}
                             <div class="sw-cms-detail__actions" slot="actions">
                                 {% block sw_cms_detail_toolbar_actions_sales_channel %}
-                                    <sw-select-field v-model="currentSalesChannelKey" @change="onSalesChannelChange">
+                                    <sw-select-field v-model="currentSalesChannelKey" size="medium" @change="onSalesChannelChange">
                                         <option v-for="salesChannel in salesChannels" :value="salesChannel.id">{{ placeholder(salesChannel, 'name') }}</option>
                                     </sw-select-field>
                                 {% endblock %}
