--- a/Resources/administration/src/module/sw-cms/page/sw-cms-list/sw-cms-list.html.twig
+++ b/Resources/administration/src/module/sw-cms/page/sw-cms-list/sw-cms-list.html.twig
@@ -53,6 +53,7 @@
                                                           name="sortType"
                                                           :label="$tc('sw-cms.sorting.labelSort')"
                                                           :value="sortingConCat"
+                                                          aside
                                                           @input="onSortingChanged">
 
                                                     {% block sw_cms_list_listing_actions_sorting_options %}
