--- a/Resources/administration/src/module/sw-order/component/sw-order-state-select/sw-order-state-select.html.twig
+++ b/Resources/administration/src/module/sw-order/component/sw-order-state-select/sw-order-state-select.html.twig
@@ -5,6 +5,7 @@
                       type="select"
                       :placeholder="selectPlaceholder"
                       :options="transitionOptions"
+                      size="small"
                       v-model="selectedActionName">
             </sw-field>
         {% endblock %}
