--- a/Resources/administration/src/module/sw-settings-payment/page/sw-settings-payment-detail/sw-settings-payment-detail.scss
+++ b/Resources/administration/src/module/sw-settings-payment/page/sw-settings-payment-detail/sw-settings-payment-detail.scss
@@ -1,10 +1,5 @@
 .sw-settings-payment-detail {
-    .sw-field.sw-field--checkbox {
-        align-self: center;
-        margin: 0;
-    }
-
-    .sw-settings-payment-detail__description textarea {
+    #sw-field--paymentMethod-description {
         min-height: 148px;
     }
 }
