--- a/Resources/administration/src/module/sw-settings-rule/component/sw-condition-goods-count/sw-condition-goods-count.html.twig
+++ b/Resources/administration/src/module/sw-settings-rule/component/sw-condition-goods-count/sw-condition-goods-count.html.twig
@@ -9,6 +9,7 @@
                   name="count"
                   :step="1"
                   class="field--main"
+                  size="medium"
                   v-model="condition.value.count">
         </sw-field>
     {% endblock %}
