--- a/Resources/administration/src/module/sw-settings-rule/component/sw-condition-last-name/sw-condition-last-name.html.twig
+++ b/Resources/administration/src/module/sw-settings-rule/component/sw-condition-last-name/sw-condition-last-name.html.twig
@@ -7,6 +7,7 @@
     {% block sw_condition_last_name_field_last_name %}
         <sw-field class="field field--main"
                   name="lastName"
+                  siez="medium"
                   v-model="condition.value.lastName">
         </sw-field>
     {% endblock %}
