--- a/Resources/administration/src/module/sw-settings-rule/component/sw-condition-line-item-with-quantity/sw-condition-line-item-with-quantity.html.twig
+++ b/Resources/administration/src/module/sw-settings-rule/component/sw-condition-line-item-with-quantity/sw-condition-line-item-with-quantity.html.twig
@@ -18,6 +18,7 @@
                   name="quantity"
                   :step="1"
                   class="field--main"
+                  size="medium"
                   v-model="condition.value.quantity">
         </sw-field>
     {% endblock %}
