--- a/Resources/administration/src/app/component/data-grid/sw-data-grid-settings/sw-data-grid-settings.scss
+++ b/Resources/administration/src/app/component/data-grid/sw-data-grid-settings/sw-data-grid-settings.scss
@@ -25,9 +25,12 @@
         }
     }
 
+    .sw-field.sw-field--switch {
+        margin-top: 0;
+    }
+
     .sw-field--checkbox,
     .sw-field--switch {
-        grid-template-columns: 16px 1fr auto;
         margin-bottom: 0;
 
         label {
