--- a/Resources/administration/src/app/component/data-grid/sw-data-grid/sw-data-grid.scss
+++ b/Resources/administration/src/app/component/data-grid/sw-data-grid/sw-data-grid.scss
@@ -57,7 +57,8 @@
         display: flex;
         align-items: center;
 
-        .sw-field {
+        .sw-field,
+        .sw-field.sw-field--small {
             margin-bottom: 0;
 
             &:not(:last-child) {
