--- a/Resources/administration/src/module/sw-cms/page/sw-cms-list/sw-cms-list.scss
+++ b/Resources/administration/src/module/sw-cms/page/sw-cms-list/sw-cms-list.scss
@@ -30,37 +30,16 @@
         align-content: center;
         margin-bottom: 30px;
 
-        .sw-field {
-            margin: 0;
-        }
-
         .sw-simple-search-field {
             margin-bottom: 0;
-            height: 100%;
-
-            .sw-simple-search-field__input {
-                input {
-                    height: auto;
-                    padding: 10px 20px 10px 45px;
-                }
-            }
         }
     }
 
     .sw-cms-list__actions-sorting {
         display: grid;
 
-        .sw-field {
-            display: grid;
-            width: auto;
-            grid-template-columns: auto auto;
-            align-items: center;
+        .sw-field.sw-field--select {
             margin-bottom: 0;
-
-            label {
-                margin: 8px 10px 8px 0;
-                text-align: right;
-            }
         }
     }
 
