--- a/Resources/administration/src/module/sw-order/component/sw-order-state-select/sw-order-state-select.scss
+++ b/Resources/administration/src/module/sw-order/component/sw-order-state-select/sw-order-state-select.scss
@@ -1,80 +1,47 @@
 @import "~scss/variables";
 @import "./../sw-order-state-history-card-entry/sw-order-state-history-card-entry.scss";
 
-$sw-order-state-select-option: $color-gutenberg;
-$sw-order-state-select-option-disabled: $color-steam-cloud;
 $sw-order-state-select-rounded-list-background: $color-white;
+$sw-order-state-select-color: $color-gutenberg;
 
-.sw-order-state-select{
-
+.sw-order-state-select {
   padding-bottom: 21px;
 
-  .sw-order-state-select__field {
+  .sw-field--select.sw-order-state-select__field,
+  .sw-field--select.sw-order-state-select__field--rounded {
     margin-bottom: 0;
-    .sw-field__select {
-      select {
-        padding: 0 8px 0 8px;
-        height: 40px;
-        margin-bottom: 0;
-      }
 
-      select option {
-        color: $sw-order-state-select-option;
-      }
-
-      select option:disabled {
-        color: $sw-order-state-select-option-disabled;
-      }
+    select.is--placeholder {
+      color: $sw-order-state-select-color;
     }
   }
 
-  .sw-order-state-select__field--rounded {
-
-    margin-bottom: 0;
-
-    .sw-field__select {
-      .sw-field__select-load-placeholder, select {
-        padding: 0 30px 0 14px;
-        border-radius: 15px;
-        height: 32px;
-        margin-bottom: 0;
-      }
-
-      select option {
-        color: $sw-order-state-select-option;
-        background-color: $sw-order-state-select-rounded-list-background;
-      }
-
-      select option:disabled {
-        color: $sw-order-state-select-option-disabled;
-      }
-      select.is--placeholder {
-        color: $sw-order-state-select-option;
-      }
-    }
-
+  .sw-field--select.sw-order-state-select__field--rounded {
+    .sw-field--select__load-placeholder, select {
+       border-radius: 15px;
+     }
   }
-  .sw-order-state__neutral-select .sw-field__select{
+  .sw-order-state__neutral-select.sw-field--select {
     select {
       background: none;
     }
   }
 
-  .sw-order-state__progress-select .sw-field__select{
+  .sw-order-state__progress-select.sw-field--select {
     select {
       background: lighten($sw-order-state-card-progress,40%);
       border: none;
     }
   }
 
-  .sw-order-state__danger-select .sw-field__select{
+  .sw-order-state__danger-select.sw-field--select {
     select {
       background: lighten($sw-order-state-card-danger,25%);
       border: none;
     }
   }
 
-  .sw-order-state__success-select .sw-field__select{
+  .sw-order-state__success-select.sw-field--select {
     select {
       background: lighten($sw-order-state-card-success,40%);
       border: none;
