--- a/Resources/administration/src/module/sw-settings-rule/component/sw-condition-goods-price/sw-condition-goods-price.html.twig
+++ b/Resources/administration/src/module/sw-settings-rule/component/sw-condition-goods-price/sw-condition-goods-price.html.twig
@@ -9,6 +9,7 @@
                   name="amount"
                   :step=0.01
                   class="field--main"
+                  size="medium"
                   v-model="condition.value.amount">
         </sw-field>
     {% endblock %}
