--- a/Resources/administration/src/module/sw-settings-rule/component/sw-condition-shipping-street/sw-condition-shipping-street.html.twig
+++ b/Resources/administration/src/module/sw-settings-rule/component/sw-condition-shipping-street/sw-condition-shipping-street.html.twig
@@ -7,6 +7,7 @@
     {% block sw_condition_shipping_street_field_street_name %}
         <sw-field class="field--main"
                   name="streetName"
+                  size="medium"
                   v-model="condition.value.streetName">
         </sw-field>
     {% endblock %}
