--- a/Resources/administration/src/module/sw-settings-rule/component/sw-condition-weight-of-cart/sw-condition-weight-of-cart.html.twig
+++ b/Resources/administration/src/module/sw-settings-rule/component/sw-condition-weight-of-cart/sw-condition-weight-of-cart.html.twig
@@ -9,6 +9,7 @@
                   name="weight"
                   :step="0.01"
                   class="field--main"
+                  size="medium"
                   v-model="condition.value.weight">
         </sw-field>
     {% endblock %}
