NEXT-2464 - Remove remnant view data usages

--- a/Resources/administration/src/module/sw-settings-privacy/page/sw-settings-privacy-index/sw-settings-privacy-index.html.twig
+++ b/Resources/administration/src/module/sw-settings-privacy/page/sw-settings-privacy-index/sw-settings-privacy-index.html.twig
@@ -77,7 +77,7 @@
 
                                                             <option v-for="salesChannel in salesChannels"
                                                                     :value="salesChannel.id">
-                                                                {{ salesChannel.meta.viewData.name }}
+                                                                {{ salesChannel.translated.name }}
                                                             </option>
                                                         </sw-field>
                                                     {% endblock %}
