NTR - fix price field with disable saving when request calculation

--- a/Resources/administration/src/module/sw-product/component/sw-product-price-form/sw-product-price-form.html.twig
+++ b/Resources/administration/src/module/sw-product/component/sw-product-price-form/sw-product-price-form.html.twig
@@ -29,7 +29,8 @@
                 :price="product.price"
                 :taxRate="productTaxRate"
                 :currency="defaultCurrency"
-                validation="required">
+                validation="required"
+                @calculating="priceIsCalculating">
             </sw-price-field>
         {% endblock %}
 
