--- a/Resources/administration/src/module/sw-product/page/sw-product-detail/sw-product-detail.html.twig
+++ b/Resources/administration/src/module/sw-product/page/sw-product-detail/sw-product-detail.html.twig
@@ -16,7 +16,7 @@
                 {% endblock %}
 
                 {% block sw_product_detail_actions_save %}
-                    <sw-button variant="primary" class="sw-product-detail__save-action" :disabled="product.isLoading" @click.prevent="onSave">
+                    <sw-button variant="primary" class="sw-product-detail__save-action" :disabled="disableSaving" @click.prevent="onSave">
                         {{ $tc('sw-product.detail.buttonSave') }}
                     </sw-button>
                 {% endblock %}
@@ -78,7 +78,8 @@
                                  :manufacturerStore="manufacturerStore"
                                  :taxes="taxes"
                                  :attributeSets="attributeSets"
-                                 :currencies="currencies">
+                                 :currencies="currencies"
+                                 @calculating="updatePriceIsCalculating">
                     </router-view>
                 {% endblock %}
 
