--- a/Resources/administration/src/module/sw-order/view/sw-order-detail-base/sw-order-detail-base.html.twig
+++ b/Resources/administration/src/module/sw-order/view/sw-order-detail-base/sw-order-detail-base.html.twig
@@ -127,5 +127,17 @@
                 :delivery="currentOrder.deliveries[0]">
             </sw-order-delivery-metadata>
         {% endblock %}
+
+        {% block sw_order_detail_attribute_sets %}
+            <sw-card :title="$tc('sw-settings-attribute.general.mainMenuItemGeneral')"
+                     v-if="next754 && attributeSets.length > 0"
+                     :isLoading="order.isLoading">
+                <sw-attribute-set-renderer
+                        :disabled="!isEditing"
+                        :entity="order"
+                        :sets="attributeSets">
+                </sw-attribute-set-renderer>
+            </sw-card>
+        {% endblock %}
     </div>
 {% endblock %}
