NEXT-2543 - Fix login animation

--- a/Resources/administration/src/module/sw-login/page/index/sw-login.scss
+++ b/Resources/administration/src/module/sw-login/page/index/sw-login.scss
@@ -229,6 +229,10 @@ $sw-login-error-animation-duration: .15s;
             transform: scale(1.3);
         }
 
+        .sw-login__content {
+            opacity: 0;
+        }
+
         .sw-login__image {
             opacity: 0;
         }
